# cognote

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ai guidelines.md  architecture & design.md
src/: cli.py  config.py  recorder.py  session.py  transcriber.py  utils.py  writer.py
